Reformat table in random scenario

--- a/sections/random_scenario.tex
+++ b/sections/random_scenario.tex
@@ -243,41 +243,43 @@ Choose your \textbf{starting conditions} and \textbf{Town strength}.
 \renewcommand{\azure}{\origazure[12]}
 
 
-\hommtable[]{27}{
-  \centering
-  \medskip
-  \textbf{Starting Conditions}\\
-  \bigskip
+\begin{table*}
+  \hommtable[]{27}{
+    \centering
+    \medskip
+    \textbf{Starting Conditions}\\
+    \bigskip
 
-  \begin{tabularx}{0.99\linewidth}{p{0.12\linewidth}XXXX} & \darkcell{Stingy} & \darkcell{Fair} & \darkcell{Generous}\\
-  \darkcell[1.4]{Army}
-    & \lightcellleft[1.4]{2 × Few cheapest \bronze\ Units}
-    & \lightcellleft[1.4]{Pack of cheap \bronze\ Units \linebreak Few chosen \bronze\ Units}
-    & \lightcellleft[1.4]{Pack of chosen \bronze\ Units \linebreak Few cheap \silver\ Units}\\
-  \darkcell[1.4]{Starting Resources}
-    & \lightcellleft[1.4]{10 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}}
-    & \lightcellleft[1.4]{16 \svg{gold}, 5 \svg{building_materials}, 1 \svg{valuables}}
-    & \lightcellleft[1.4]{20 \svg{gold}, 8 \svg{building_materials}, 2 \svg{valuables}}\\
-  \end{tabularx}
+    \begin{tabularx}{0.99\linewidth}{p{0.12\linewidth}XXXX} & \darkcell{Stingy} & \darkcell{Fair} & \darkcell{Generous}\\
+    \darkcell[1.4]{Army}
+      & \lightcellleft[1.4]{2 × Few cheapest \bronze\ Units}
+      & \lightcellleft[1.4]{Pack of cheap \bronze\ Units \linebreak Few chosen \bronze\ Units}
+      & \lightcellleft[1.4]{Pack of chosen \bronze\ Units \linebreak Few cheap \silver\ Units}\\
+    \darkcell[1.4]{Starting Resources}
+      & \lightcellleft[1.4]{10 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}}
+      & \lightcellleft[1.4]{16 \svg{gold}, 5 \svg{building_materials}, 1 \svg{valuables}}
+      & \lightcellleft[1.4]{20 \svg{gold}, 8 \svg{building_materials}, 2 \svg{valuables}}\\
+    \end{tabularx}
 
-  \bigskip
-  {\color{\iftoggle{noartbackground}{black}{darkyellow}}\rule{\textwidth}{0.5pt}}
+    \bigskip
+    {\color{\iftoggle{noartbackground}{black}{darkyellow}}\rule{\textwidth}{0.5pt}}
 
-  \vspace*{1em}
-  \textbf{Town Strength}\\
-  \bigskip
+    \vspace*{1em}
+    \textbf{Town Strength}\\
+    \bigskip
 
-  \begin{tabularx}{0.99\linewidth}{p{0.12\linewidth}XXXX} & \darkcell{Settlement} & \darkcell{City} & \darkcell{Capitol}\\
-  \darkcell[1.4]{Starting Income}
-    & \lightcellleft[1.4]{10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}}
-    & \lightcellleft[1.4]{15 \svg{gold}, 0 \svg{building_materials}, 1 \svg{valuables}}
-    & \lightcellleft[1.4]{20 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}}\\
-  \darkcell[2.0]{Town Buildings}
-    & \lightcellleft[2.0]{\bronze\ Dwelling}
-    & \lightcellleft[2.0]{\bronze\ Dwelling \linebreak City Hall}
-    & \lightcellleft[2.0]{\bronze\ Dwelling \linebreak City Hall \linebreak Citadel}\\
-  \end{tabularx}
-}
+    \begin{tabularx}{0.99\linewidth}{p{0.12\linewidth}XXXX} & \darkcell{Settlement} & \darkcell{City} & \darkcell{Capitol}\\
+    \darkcell[1.4]{Starting Income}
+      & \lightcellleft[1.4]{10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}}
+      & \lightcellleft[1.4]{15 \svg{gold}, 0 \svg{building_materials}, 1 \svg{valuables}}
+      & \lightcellleft[1.4]{20 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}}\\
+    \darkcell[2.0]{Town Buildings}
+      & \lightcellleft[2.0]{\bronze\ Dwelling}
+      & \lightcellleft[2.0]{\bronze\ Dwelling \linebreak City Hall}
+      & \lightcellleft[2.0]{\bronze\ Dwelling \linebreak City Hall \linebreak Citadel}\\
+    \end{tabularx}
+  }
+\end{table*}
 
 \begin{multicols}{2}
 
