Fix tables in the hunt

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -150,30 +150,32 @@ During this Scenario:
 
 \bigskip
 
-\hommtable[]{8}{
-  \centering
-  \medskip
+\begin{table*}[h]
+  \hommtable[]{9}{
+    \centering
+    \medskip
 
-  \let\origbronze\bronze
-  \let\origsilver\silver
-  \let\origgolden\golden
-  \let\origazure\azure
-  \renewcommand{\bronze}{\origbronze[20]}
-  \renewcommand{\silver}{\origsilver[20]}
-  \renewcommand{\golden}{\origgolden[20]}
-  \renewcommand{\azure}{\origazure[20]}
+    \let\origbronze\bronze
+    \let\origsilver\silver
+    \let\origgolden\golden
+    \let\origazure\azure
+    \renewcommand{\bronze}{\origbronze[20]}
+    \renewcommand{\silver}{\origsilver[20]}
+    \renewcommand{\golden}{\origgolden[20]}
+    \renewcommand{\azure}{\origazure[20]}
 
-  \begin{tabularx}{0.95\linewidth}{XXXX}
-  \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
-  \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
-  \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
-  \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
-  \lightcell[1.8]{No additional\\changes} &
-  \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
-  \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 30} &
-  \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +2 \svg{attack-yellow} \\ +2 \svg{defense-yellow}}
-  \end{tabularx}
-}
+    \begin{tabularx}{0.95\linewidth}{XXXX}
+    \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
+    \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
+    \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
+    \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
+    \lightcell[1.8]{No additional\\changes} &
+    \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
+    \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 30} &
+    \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +2 \svg{attack-yellow} \\ +2 \svg{defense-yellow}}
+    \end{tabularx}
+  }
+\end{table*}
 
 \clearpage
 
@@ -218,36 +220,39 @@ During this Scenario:
 }
 
 \bigskip
+\enlargethispage{3\baselineskip}
 
-\hommtable[]{10}{
-  \centering
-  \medskip
+\begin{table*}[h]
+  \hommtable[]{11}{
+    \centering
+    \medskip
 
-  \let\origbronze\bronze
-  \let\origsilver\silver
-  \let\origgolden\golden
-  \let\origazure\azure
-  \renewcommand{\bronze}{\origbronze[20]}
-  \renewcommand{\silver}{\origsilver[20]}
-  \renewcommand{\golden}{\origgolden[20]}
-  \renewcommand{\azure}{\origazure[20]}
+    \let\origbronze\bronze
+    \let\origsilver\silver
+    \let\origgolden\golden
+    \let\origazure\azure
+    \renewcommand{\bronze}{\origbronze[20]}
+    \renewcommand{\silver}{\origsilver[20]}
+    \renewcommand{\golden}{\origgolden[20]}
+    \renewcommand{\azure}{\origazure[20]}
 
-  \begin{tabularx}{0.95\linewidth}{XXXX}
-  \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
-  \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
-  \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
-  \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
-  \lightcell[2.8]{No additional\\changes} &
-  \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
-  \lightcell[2.8]{{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26 \\ +1 Retaliation}} &
-  \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32 \\ +1 Retaliation  \\ Remove additional 2 \svg{damage-yellow} by consuming Golems} \\
-  \end{tabularx}
-}
+    \begin{tabularx}{0.95\linewidth}{XXXX}
+    \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
+    \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
+    \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
+    \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
+    \lightcell[2.8]{No additional\\changes} &
+    \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
+    \lightcell[2.8]{{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26 \\ +1 Retaliation}} &
+    \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32 \\ +1 Retaliation  \\ Remove additional 2 \svg{damage-yellow} by consuming Golems} \\
+    \end{tabularx}
+  }
+\end{table*}
 
-\vspace{-1em}
+\clearpage
 
 \begin{wrapfigure}{l}{0.3\textwidth}
-  \raisebox{0pt}[\dimexpr\height-1.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/rust_dragon.jpg}}
+  \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/rust_dragon.jpg}}
 \end{wrapfigure}
 {
   \textbf{\MakeUppercase{Boss: Rust Dragon {\scriptsize Requires Fortress Expansion}}}
@@ -286,31 +291,34 @@ During this Scenario:
 }
 
 \vspace{5em}
+\enlargethispage{2\baselineskip}
 
-\hommtable[]{9}{
-  \centering
-  \medskip
+\begin{table*}[h]
+  \hommtable[]{10}{
+    \centering
+    \medskip
 
-  \let\origbronze\bronze
-  \let\origsilver\silver
-  \let\origgolden\golden
-  \let\origazure\azure
-  \renewcommand{\bronze}{\origbronze[20]}
-  \renewcommand{\silver}{\origsilver[20]}
-  \renewcommand{\golden}{\origgolden[20]}
-  \renewcommand{\azure}{\origazure[20]}
+    \let\origbronze\bronze
+    \let\origsilver\silver
+    \let\origgolden\golden
+    \let\origazure\azure
+    \renewcommand{\bronze}{\origbronze[20]}
+    \renewcommand{\silver}{\origsilver[20]}
+    \renewcommand{\golden}{\origgolden[20]}
+    \renewcommand{\azure}{\origazure[20]}
 
-  \begin{tabularx}{0.95\linewidth}{XXXX}
-  \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
-  \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
-  \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
-  \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
-  \lightcell[2.5]{No additional\\changes} &
-  \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 20} &
-  \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32} &
-  \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +1 to Corrosion armor decrease} \\
-  \end{tabularx}
-}
+    \begin{tabularx}{0.95\linewidth}{XXXX}
+    \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
+    \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
+    \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
+    \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
+    \lightcell[2.5]{No additional\\changes} &
+    \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 20} &
+    \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32} &
+    \lightcell[2.5]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +1 to Corrosion armor decrease} \\
+    \end{tabularx}
+  }
+\end{table*}
 
 \vspace{-1em}
 
@@ -362,28 +370,31 @@ During this Scenario:
 }
 
 \bigskip
+\enlargethispage{2\baselineskip}
 
-\hommtable[]{7}{
-  \centering
-  \medskip
+\begin{table*}[h]
+  \hommtable[]{8}{
+    \centering
+    \medskip
 
-  \let\origbronze\bronze
-  \let\origsilver\silver
-  \let\origgolden\golden
-  \let\origazure\azure
-  \renewcommand{\bronze}{\origbronze[20]}
-  \renewcommand{\silver}{\origsilver[20]}
-  \renewcommand{\golden}{\origgolden[20]}
-  \renewcommand{\azure}{\origazure[20]}
+    \let\origbronze\bronze
+    \let\origsilver\silver
+    \let\origgolden\golden
+    \let\origazure\azure
+    \renewcommand{\bronze}{\origbronze[20]}
+    \renewcommand{\silver}{\origsilver[20]}
+    \renewcommand{\golden}{\origgolden[20]}
+    \renewcommand{\azure}{\origazure[20]}
 
-  \begin{tabularx}{0.95\linewidth}{XXXX}
-  \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
-  \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
-  \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
-  \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
-  \lightcell[1.6]{No additional\\changes} &
-  \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 18} &
-  \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26} &
-  \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32 \\ +1 Mirage} \\
-  \end{tabularx}
-}
+    \begin{tabularx}{0.95\linewidth}{XXXX}
+    \darkcell{\raisebox{-.2\height}{\bronze} \textbf{Easy}} &
+    \darkcell{\raisebox{-.2\height}{\silver} \textbf{Normal}} &
+    \darkcell{\raisebox{-.2\height}{\golden} \textbf{Hard}} &
+    \darkcell{\raisebox{-.2\height}{\azure} \textbf{Impossible}}\\
+    \lightcell[1.6]{No additional\\changes} &
+    \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 18} &
+    \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26} &
+    \lightcell[1.6]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32 \\ +1 Mirage} \\
+    \end{tabularx}
+  }
+\end{table*}
