--- a/translations/the_hunt.tex/de.po
+++ b/translations/the_hunt.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-07-05 00:39+0200\n"
+"POT-Creation-Date: 2025-10-19 12:57+0000\n"
 "PO-Revision-Date: 2025-06-23 13:01+0000\n"
 "Last-Translator: Andreas Beck <a-beck@gmx.net>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -98,7 +98,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -114,7 +114,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:174
 #: campaigns/inferno_steadwicks_fall.tex:194
 #: campaigns/inferno_deal_with_the_devil.tex:148
-#: sections/random_scenario.tex:306
+#: sections/random_scenario.tex:308
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -395,29 +395,39 @@ msgid ""
 "\\end{itemize} }"
 msgstr ""
 
-#. type: Plain text
-#: clash/the_hunt.tex:177
+#. type: table*
+#: clash/the_hunt.tex:179
+#, no-wrap
 msgid ""
-"\\hommtable[]{8}{ \\centering \\medskip \\let\\origbronze\\bronze "
-"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
-"\\renewcommand{\\bronze}{\\origbronze[20]} \\renewcommand{\\silver}"
-"{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
-"\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}"
-"{XXXX} \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ "
-"\\lightcell[1.8]{No additional\\\\changes} & \\lightcell[1.8]"
-"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 30} & \\lightcell[1.8]"
-"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +2 \\svg{attack-yellow} \\\\ +2 \\svg{defense-yellow}} "
-"\\end{tabularx} }"
+"[h]\n"
+"  \\hommtable[]{9}{\n"
+"    \\centering\n"
+"    \\medskip\n"
+"\n"
+"    \\let\\origbronze\\bronze\n"
+"    \\let\\origsilver\\silver\n"
+"    \\let\\origgolden\\golden\n"
+"    \\let\\origazure\\azure\n"
+"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
+"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
+"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
+"    \\renewcommand{\\azure}{\\origazure[20]}\n"
+"\n"
+"    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\\n"
+"    \\lightcell[1.8]{No additional\\\\changes} &\n"
+"    \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 22} &\n"
+"    \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 30} &\n"
+"    \\lightcell[1.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +2 \\svg{attack-yellow} \\\\ +2 \\svg{defense-yellow}}\n"
+"    \\end{tabularx}\n"
+"  }"
 msgstr ""
 
 #. type: wrapfigure
-#: clash/the_hunt.tex:219
+#: clash/the_hunt.tex:221
 msgid ""
 "{l}{0.3\\textwidth} \\raisebox{0pt}"
 "[\\dimexpr\\height-0.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
@@ -425,7 +435,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: clash/the_hunt.tex:219
+#: clash/the_hunt.tex:221
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Crystal Dragon}} \\medskip \\textit{Made "
 "entirely from red crystal and brought to life through magical means, the "
@@ -452,37 +462,47 @@ msgid ""
 "battle Round.  \\end{itemize} }"
 msgstr ""
 
-#. type: Plain text
-#: clash/the_hunt.tex:246
+#. type: table*
+#: clash/the_hunt.tex:251
+#, no-wrap
 msgid ""
-"\\hommtable[]{10}{ \\centering \\medskip \\let\\origbronze\\bronze "
-"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
-"\\renewcommand{\\bronze}{\\origbronze[20]} \\renewcommand{\\silver}"
-"{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
-"\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}"
-"{XXXX} \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ "
-"\\lightcell[2.8]{No additional\\\\changes} & \\lightcell[2.8]"
-"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"22} & \\lightcell[2.8]{{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Retaliation}} & "
-"\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
-"{\\images/hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 "
-"\\svg{damage-yellow} by consuming Golems} \\\\ \\end{tabularx} }"
+"[h]\n"
+"  \\hommtable[]{11}{\n"
+"    \\centering\n"
+"    \\medskip\n"
+"\n"
+"    \\let\\origbronze\\bronze\n"
+"    \\let\\origsilver\\silver\n"
+"    \\let\\origgolden\\golden\n"
+"    \\let\\origazure\\azure\n"
+"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
+"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
+"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
+"    \\renewcommand{\\azure}{\\origazure[20]}\n"
+"\n"
+"    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\\n"
+"    \\lightcell[2.8]{No additional\\\\changes} &\n"
+"    \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 22} &\n"
+"    \\lightcell[2.8]{{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Retaliation}} &\n"
+"    \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 Retaliation  \\\\ Remove additional 2 \\svg{damage-yellow} by consuming Golems} \\\\\n"
+"    \\end{tabularx}\n"
+"  }"
 msgstr ""
 
 #. type: wrapfigure
-#: clash/the_hunt.tex:287
+#: clash/the_hunt.tex:292
 msgid ""
 "{l}{0.3\\textwidth} \\raisebox{0pt}"
-"[\\dimexpr\\height-1.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
+"[\\dimexpr\\height-0.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
 "{\\art/rust_dragon.jpg}}"
 msgstr ""
 
 #. type: Plain text
-#: clash/the_hunt.tex:287
+#: clash/the_hunt.tex:292
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Rust Dragon {\\scriptsize Requires Fortress "
 "Expansion}}} \\medskip \\textit{Rust Dragons are known to hunt Gorgons, and "
@@ -508,28 +528,39 @@ msgid ""
 "up to -4 \\svg{defense}.  \\end{itemize} }"
 msgstr ""
 
-#. type: Plain text
-#: clash/the_hunt.tex:314
+#. type: table*
+#: clash/the_hunt.tex:322
+#, no-wrap
 msgid ""
-"\\hommtable[]{9}{ \\centering \\medskip \\let\\origbronze\\bronze "
-"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
-"\\renewcommand{\\bronze}{\\origbronze[20]} \\renewcommand{\\silver}"
-"{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
-"\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}"
-"{XXXX} \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ "
-"\\lightcell[2.5]{No additional\\\\changes} & \\lightcell[2.5]"
-"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
-"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +1 to Corrosion armor decrease} \\\\ \\end{tabularx} }"
+"[h]\n"
+"  \\hommtable[]{10}{\n"
+"    \\centering\n"
+"    \\medskip\n"
+"\n"
+"    \\let\\origbronze\\bronze\n"
+"    \\let\\origsilver\\silver\n"
+"    \\let\\origgolden\\golden\n"
+"    \\let\\origazure\\azure\n"
+"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
+"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
+"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
+"    \\renewcommand{\\azure}{\\origazure[20]}\n"
+"\n"
+"    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\\n"
+"    \\lightcell[2.5]{No additional\\\\changes} &\n"
+"    \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 20} &\n"
+"    \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 32} &\n"
+"    \\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to Corrosion armor decrease} \\\\\n"
+"    \\end{tabularx}\n"
+"  }"
 msgstr ""
 
 #. type: wrapfigure
-#: clash/the_hunt.tex:363
+#: clash/the_hunt.tex:371
 msgid ""
 "{l}{0.28\\textwidth} \\raisebox{0pt}"
 "[\\dimexpr\\height-0.2\\baselineskip\\relax]{\\framedimage[1.1\\linewidth]"
@@ -537,7 +568,7 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: clash/the_hunt.tex:363
+#: clash/the_hunt.tex:371
 msgid ""
 "{ \\textbf{\\MakeUppercase{Boss: Faerie Dragon {\\scriptsize Requires "
 "Rampart Expansion}}} \\medskip \\textit{Faerie Dragons are deceptively cute, "
@@ -568,22 +599,33 @@ msgid ""
 "left, the dragon loses the ability to cast Spells.  \\end{itemize} }"
 msgstr ""
 
-#. type: Plain text
-#: clash/the_hunt.tex:389
+#. type: table*
+#: clash/the_hunt.tex:400
+#, no-wrap
 msgid ""
-"\\hommtable[]{7}{ \\centering \\medskip \\let\\origbronze\\bronze "
-"\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
-"\\renewcommand{\\bronze}{\\origbronze[20]} \\renewcommand{\\silver}"
-"{\\origsilver[20]} \\renewcommand{\\golden}{\\origgolden[20]} "
-"\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}"
-"{XXXX} \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ "
-"\\lightcell[1.6]{No additional\\\\changes} & \\lightcell[1.6]"
-"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"18} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 26} & \\lightcell[1.6]"
-"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"32 \\\\ +1 Mirage} \\\\ \\end{tabularx} }"
+"[h]\n"
+"  \\hommtable[]{8}{\n"
+"    \\centering\n"
+"    \\medskip\n"
+"\n"
+"    \\let\\origbronze\\bronze\n"
+"    \\let\\origsilver\\silver\n"
+"    \\let\\origgolden\\golden\n"
+"    \\let\\origazure\\azure\n"
+"    \\renewcommand{\\bronze}{\\origbronze[20]}\n"
+"    \\renewcommand{\\silver}{\\origsilver[20]}\n"
+"    \\renewcommand{\\golden}{\\origgolden[20]}\n"
+"    \\renewcommand{\\azure}{\\origazure[20]}\n"
+"\n"
+"    \\begin{tabularx}{0.95\\linewidth}{XXXX}\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Easy}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Hard}} &\n"
+"    \\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\\n"
+"    \\lightcell[1.6]{No additional\\\\changes} &\n"
+"    \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 18} &\n"
+"    \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 26} &\n"
+"    \\lightcell[1.6]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 Mirage} \\\\\n"
+"    \\end{tabularx}\n"
+"  }"
 msgstr ""
