--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -44,8 +44,8 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 The game ends when any of the following conditions are met:
 
 \begin{itemize}
-  \item One player has defeated each of the other players' Main Heroes once. \textit{That player wins the game immediately.}
   \item One player has flagged all 6 Obelisks. \textit{That player wins the game immediately.}
+  \item \textbf{4 -- 6 players:} One player has defeated each of the other players' Main Heroes once. \textit{That player wins the game immediately.}
   \item At the end of Round 15.
 \end{itemize}
 
