--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -95,10 +95,10 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \columnbreak
 
 \begin{itemize}
-  \item \textbf{Grail Token:} When gained, draw Cards up to your hand limit. If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold}, and 2 \svg{valuables}. If a Hero carrying the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
+  \item \textbf{Grail Token:} When gained, draw Cards up to your \svg{hand} limit. If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold}, and 2 \svg{valuables}. If a Hero carrying the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
   \item A defeated Main Hero may Empower one Statistic Card from their Deck of M\&M.
-  \item With fewer than 6 players, the unused Starting Towns are defended similarly to a Random Town.
+  \item With fewer than 6 players, the unused Starting Towns are defended exactly as a Random Town.
   \item Flagging an unused Starting Town increases two separate incomes by 1 space.
   \item When a Hero moves to a Starting Town, that Hero gains +1 \svg{movement}.
   \item \textit{"Closest starting player" is the player whose starting Tile is closest to your starting Tile.}
