--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -44,8 +44,8 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 The game ends when any of the following conditions are met:
 
 \begin{itemize}
-  \item One player has defeated each of the other players' Main Heroes once. \textit{That player wins the game immediately.}
   \item One player has flagged all 6 Obelisks. \textit{That player wins the game immediately.}
+  \item \textbf{4 -- 6 players:} One player has defeated each of the other players' Main Heroes once. \textit{That player wins the game immediately.}
   \item At the end of Round 15.
 \end{itemize}
 
@@ -69,7 +69,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item Repeat event of Round 4.
+  \item Repeat the event of Round 4.
 \end{itemize}
 \textbf{\nth{10} Round:}
 \begin{itemize}
@@ -77,16 +77,17 @@ If no player has achieved an immediate victory, the player with the most Victory
 \end{itemize}
 \textbf{\nth{12} Round:}
 \begin{itemize}
-  \item Repeat event of Round 4.
+  \item Repeat the event of Round 4.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item The Blocked Field on the Map Tile in the center is not considered blocked.
   \item \textbf{Sanctuary:} Search (2) your Deck. \textit{Visitable once per Faction}.
-  \item \textbf{Obelisk:} Guarded by Level VI Neutral Units. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}. \textit{Can be visited and flagged by multiple players.}
+  \item \textbf{Obelisk:} Guarded by Level VI Neutral Units. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}. \textit{Can be flagged by all players.}
   \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
   \item \textbf{Astral Gate:} Cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to the Astral Gate on the Near Tile directly opposite the Center Tile. If that Tile is undiscovered, that player immediately discovers it.
+  \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero, unless one of the players Surrenders or Retreats.
 \end{itemize}
 
 \vspace*{\fill}
@@ -98,11 +99,10 @@ If no player has achieved an immediate victory, the player with the most Victory
 \columnbreak
 
 \begin{itemize}
-  \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
   \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
   \item \textbf{Level VII Settlement:} Increase all incomes by 1 space.
   \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for half its recruitment cost or increase all incomes by one space.
-  \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half of its recruitment cost.
+  \item \textbf{Dragon Utopia:} Take any Card from your Discard pile. You may recruit one dragon you defeated for half its recruitment cost.
   \item \textbf{11-Round game:} Remove P × Near (IV-V) Map Tiles and replace the Center (VI-VII) Tile with a Near (IV-V) Map Tile without an Obelisk.
 \end{itemize}
 
