--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -51,13 +51,13 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 The game ends at the end of the Round when any of the following conditions are met:
 
 \begin{itemize}
- \item One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
+ \item \textbf{4 players:} One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
  \item One player has conquered both Dragon Utopias. \textit{That player wins the game immediately.}
  \item At the end of Round 13.
 \end{itemize}
 
-If no player achieves immediate victory, the player controlling a Dragon Utopia wins.
-If different players control the two Utopias, they each draw Cards up to their Hand Limit and engage in a final Combat -- the winner is the victor.
+If no player has achieved an immediate victory, the player controlling a Dragon Utopia wins.
+If different players control the two Utopias, they each draw Cards up to their \svg{hand} Limit and engage in a final Combat -- the winner is the victor.
 If no one controls a Dragon Utopia, all players lose.
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -80,7 +80,7 @@ If no one controls a Dragon Utopia, all players lose.
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Grail Token}: When a player gains or starts their turn with The Grail Token, they gain +1 \svg{morale_positive} and Search (4) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may pick up the Grail Token.
+  \item \textbf{Grail Token}: When gained, gain +1 \svg{morale_positive} and Search (4) \svg{spellpower} or \svg{artifact}. At the start of your turn, gain +1 \svg{morale_positive} and 5 \svg{gold}. Both Main and Secondary Heroes may pick up the Grail Token.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
   \item After winning a Combat against another player's Main Hero, draw up to your Hand Limit and discard 1 Card.
